tests/integration/tests/di/ui/fail/provider_returns_plain_type.rs
use reinhardt_di::injectable;

struct AppConfig;

#[injectable(scope = "transient")]
async fn app_config() -> AppConfig {
	AppConfig
}

fn main() {}
